<resources>
  <string name="app_name">Symply Budget</string>
  <string name="expo_runtime_version">1.0.0</string>
</resources>